--- a/iteration.html
+++ b/iteration.html
@@ -23,13 +23,12 @@
     background-color: #1f1f1f;
   }
   /* Couleurs selon niveau */
-  section.niveau-0 { border-color: #888888; } /* gris pour Niveau 0 */
-  section.niveau-1 { border-color: #4caf50; } /* vert foncé */
-  section.niveau-2 { border-color: #81c784; } /* vert clair */
-  section.niveau-3 { border-color: #ffeb3b; color: #333; } /* jaune avec texte plus sombre */
-  section.niveau-4 { border-color: #f5f5dc; color: #333; } /* beige clair avec texte plus sombre */
-  section.niveau-5 { border-color: #ff9800; } /* orange */
-  section.niveau-6 { border-color: #f44336; } /* rouge */
+  section.niveau-0 { border-color: #4caf50; } /* vert foncé */
+  section.niveau-1 { border-color: #81c784; } /* vert clair */
+  section.niveau-2 { border-color: #f5f5dc; color: #333; } /* beige clair avec texte sombre */
+  section.niveau-3 { border-color: #ffeb3b; color: #333; } /* jaune avec texte sombre */
+  section.niveau-4 { border-color: #ff9800; } /* orange */
+  section.niveau-5 { border-color: #f44336; } /* rouge */
 
   h2 {
     margin-top: 0;
@@ -77,11 +76,6 @@
 <section class="niveau-5">
   <h2>Niveau 5</h2>
   <p>Connaît absolument tout sur et hors site.</p>
-</section>
-
-<section class="niveau-6">
-  <h2>Niveau 6</h2>
-  <p>Niveau ultime, danger extrême, connaissances très confidentielles et accès limité.</p>
 </section>
 
 </body>
