--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     }
     /* Carrousel styles */
     .carousel-container {
-      width: 100%;
-      max-width: 600px;
+      position: relative;
+      width: 600px; /* 3 images x 180px wide */
       margin: 0 auto 20px;
       overflow: hidden;
       border-radius: 12px;
@@ -113,15 +113,14 @@
       width: max-content; /* largeur automatique en fonction du contenu */
     }
     .carousel-slide {
-      width: 100%;
       display: flex;
+      width: 600px; /* largeur d'un slide = 3 images * 180px */
       justify-content: space-between;
-      flex-shrink: 0;
+      flex-shrink: 0; /* empêche le rétrécissement */
     }
-
     .carousel-slide img {
-      width: 30%;
-      height: auto;
+      width: 180px;
+      height: 120px;
       border-radius: 12px;
       object-fit: cover;
     }
@@ -134,21 +133,6 @@
       text-align: center;
       z-index: 1;
     }
-
-    @media (max-width: 768px) {
-      .side-image {
-        display: none;
-      }
-    .main-content {
-      margin-left: 5%;
-      margin-right: 5%;
-      padding: 20px 10px;
-    }
-  .about {
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-}
   </style>
 </head>
 <body>
@@ -342,27 +326,16 @@
 
   <!-- JS pour le carrousel -->
   <script>
-const carouselTrack = document.getElementById('carouselTrack');
-const slides = carouselTrack.children;
+    const carouselTrack = document.getElementById('carouselTrack');
+    const slides = carouselTrack.children;
+    const slideWidth = 600; // largeur fixe d'un slide en px
+    let index = 0;
 
-function updateSlideWidth() {
-  return document.querySelector('.carousel-container').offsetWidth;
-}
-
-let slideWidth = updateSlideWidth();
-let index = 0;
-
-window.addEventListener('resize', () => {
-  slideWidth = updateSlideWidth();
-  // repositionne le carousel si besoin
-  carouselTrack.style.transform = `translateX(-${index * slideWidth}px)`;
-});
-
-setInterval(() => {
-  index++;
-  if (index >= slides.length) index = 0;
-  carouselTrack.style.transform = `translateX(-${index * slideWidth}px)`;
-}, 3000);
+    setInterval(() => {
+      index++;
+      if (index >= slides.length) index = 0;
+      carouselTrack.style.transform = `translateX(-${index * slideWidth}px)`;
+    }, 3000);
   </script>
 
 </body>
