--- a/iteration.html
+++ b/iteration.html
@@ -21,12 +21,13 @@
     margin-bottom: 20px;
     border-radius: 4px;
     background-color: #1f1f1f;
+    color: #eee; /* texte blanc partout */
   }
   /* Couleurs selon niveau */
   section.niveau-0 { border-color: #4caf50; } /* vert foncé */
   section.niveau-1 { border-color: #81c784; } /* vert clair */
-  section.niveau-2 { border-color: #f5f5dc; color: #333; } /* beige clair avec texte sombre */
-  section.niveau-3 { border-color: #ffeb3b; color: #333; } /* jaune avec texte sombre */
+  section.niveau-2 { border-color: #f5f5dc; } /* beige */
+  section.niveau-3 { border-color: #ffeb3b; } /* jaune */
   section.niveau-4 { border-color: #ff9800; } /* orange */
   section.niveau-5 { border-color: #f44336; } /* rouge */
 
