--- a/index.html
+++ b/index.html
@@ -134,9 +134,21 @@
       z-index: 1;
     }
   </style>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-
+  <header>
+    <h1>📚 Lore & Contexte du serveur</h1>
+    <nav class="main-nav">
+      <a href="guide.html">🎓 Guide</a>
+      <a href="lore.html" class="active">📚 Lore</a>
+      <a href="tech.html">🛠️ Tech</a>
+      <a href="reglement.html">⚖️ Règlement</a>
+      <a href="events.html">🏆 Événements</a>
+      <a href="discord.html">💬 Discord</a>
+      <a href="contact.html">📧 Contact</a>
+    </nav>
+  </header>
   <!-- Images étendues -->
   <img src="image1.png" alt="Image gauche" class="side-image left-image" />
   <img src="image2.png" alt="Image droite" class="side-image right-image" />
