--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
 </head>
 <body>
   <header>
-    <h1>📚 Lore & Contexte du serveur</h1>
+    <h1>Accueil</h1>
     <nav class="main-nav">
+      <a href="index.html"> Accueil</a>
       <a href="guide.html">🎓 Guide</a>
-      <a href="lore.html" class="active">📚 Lore</a>
+      <a href="lore.html">📚 Lore</a>
       <a href="tech.html">🛠️ Tech</a>
       <a href="reglement.html">⚖️ Règlement</a>
       <a href="events.html">🏆 Événements</a>
