--- a/lore.html
+++ b/lore.html
@@ -39,9 +39,19 @@
   </style>
 </head>
 <body>
-
-  <h1>📚 Lore & Contexte du serveur</h1>
-
+  <header>
+    <h1>📚 Lore & Contexte du serveur</h1>
+    <nav class="main-nav">
+      <a href="guide.html">🎓 Guide</a>
+      <a href="lore.html" class="active">📚 Lore</a>
+      <a href="tech.html">🛠️ Tech</a>
+      <a href="reglement.html">⚖️ Règlement</a>
+      <a href="events.html">🏆 Événements</a>
+      <a href="discord.html">💬 Discord</a>
+      <a href="contact.html">📧 Contact</a>
+    </nav>
+  </header>
+  
   <div class="zone-info">
     <p><strong>Nom de la Zone :</strong> Zone-74</p>
     <p><strong>Localisation :</strong> Une zone reculée du nord de la Sibérie occidentale</p>
