--- a/guide.html
+++ b/guide.html
@@ -11,7 +11,7 @@
     <h1>Guide du nouveau joueur</h1>
     <!-- inclus le menu principal -->
     <nav class="main-nav">
-      <a href="guide.html">🎓 Guide</a>
+      <a href="guide.html" class="active">🎓 Guide</a>
       <a href="lore.html">📚 Lore</a>
       <a href="tech.html">🛠️ Tech</a>
       <a href="reglement.html">⚖️ Règlement</a>
