--- a/lore.html
+++ b/lore.html
@@ -37,6 +37,7 @@
       margin-bottom: 10px;
     }
   </style>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <header>
