--- a/lore.html
+++ b/lore.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lore & Contexte - SCP-RP</title>
   <style>
+    <link rel="stylesheet" href="assets/css/style_menu.css" />
     body {
       background-color: #121212;
       color: #eee;
@@ -43,16 +44,30 @@
   <header>
     <h1>📚 Lore & Contexte du serveur</h1>
     <nav class="main-nav">
-      <a href="guide.html">🎓 Guide</a>
-      <a href="lore.html" class="active">📚 Lore</a>
-      <a href="tech.html">🛠️ Tech</a>
-      <a href="reglement.html">⚖️ Règlement</a>
-      <a href="events.html">🏆 Événements</a>
-      <a href="discord.html">💬 Discord</a>
-      <a href="contact.html">📧 Contact</a>
+      <a class="button" href="index.html">☣ Accueil</a>
+      <a class="button" href="guide.html">🎓 Guide</a>
+      <a class="button" href="lore.html">📚 Lore</a>
+      <a class="button" href="mises-a-jour.html">📰 GATES News</a>
+      <a class="button" href="reglement.html">⚖️ Règlement</a>
+
+      <div class="dropdown">
+        <a class="button">🎭 Roles</a>
+        <div class="dropdown-content">
+          <a href="iteration.html">Les itérations</a>
+          <a href="classe_d.html">Classe D</a>
+          <a href="corps_securite.html">Département du Corps de sûreté</a>
+          <a href="departement_administratif.html">Département administratif</a>
+          <a href="departement_medical.html">Département médicale</a>
+          <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
+          <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
+          <a href="SCP.html">SCP</a>
+        </div>
+      </div>
+      
+      <a class="button" href="boutique.html">🛒 Boutique</a>
+      <a class="button" href="discord.html">💬 Discord</a>
     </nav>
   </header>
-  
   <div class="zone-info">
     <p><strong>Nom de la Zone :</strong> Zone-74</p>
     <p><strong>Localisation :</strong> Une zone reculée du nord de la Sibérie occidentale</p>
