--- a/guide.html
+++ b/guide.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Guide du nouveau joueur – Serveur GMod SCP‑RP</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style_menu.css" />
 </head>
 <body>
   <header>
-    <h1>Guide du nouveau joueur</h1>
+    <h1>🎓 Guide du nouveau joueur</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
