--- a/mises-a-jour.html
+++ b/mises-a-jour.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/style_menu.css" />
 <body style="font-family: Arial; background: #000; color: #fff; padding: 30px;">
   <header>
-    <h1>📚 Lore & Contexte du serveur</h1>
+    <h1>📰 GATES News</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
