--- a/classe_d.html
+++ b/classe_d.html
@@ -42,9 +42,8 @@
   <link rel="stylesheet" href="assets/css/style_menu.css" />
 </head>
 <body>
-
   <header>
-    <h1>🎭 Roles - Classe D</h1>
+    <h1>📚 Lore & Contexte du serveur</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
@@ -62,6 +61,7 @@
           <a href="departement_medical.html">Département médicale</a>
           <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
           <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
+          <a href="groupe_interet.html">Groupe d'Intérêt</a>
           <a href="SCP.html">SCP</a>
         </div>
       </div>
