--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </head>
 <body>
   <header>
-    <h1>📚 Lore & Contexte du serveur</h1>
+    <h1>☣ Accueil</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
