--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     }
   </style>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style_menu.css" />
 </head>
 <body>
   <header>
