--- a/lore.html
+++ b/lore.html
@@ -60,6 +60,7 @@
           <a href="departement_medical.html">Département médicale</a>
           <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
           <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
+          <a href="groupe_interet.html">Groupe d'Intérêt</a>
           <a href="SCP.html">SCP</a>
         </div>
       </div>
