--- a/departement_medical.html
+++ b/departement_medical.html
@@ -45,11 +45,38 @@
             margin-bottom: 40px;
         }
     </style>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style_menu.css" />
 </head>
 <body>
-    <header>
-        <h1>Département Médical</h1>
-    </header>
+  <header>
+    <h1>🎭 Roles - Département Médicale</h1>
+    <nav class="main-nav">
+      <a class="button" href="index.html">☣ Accueil</a>
+      <a class="button" href="guide.html">🎓 Guide</a>
+      <a class="button" href="lore.html">📚 Lore</a>
+      <a class="button" href="mises-a-jour.html">📰 GATES News</a>
+      <a class="button" href="reglement.html">⚖️ Règlement</a>
+
+      <div class="dropdown">
+        <a class="button">🎭 Roles</a>
+        <div class="dropdown-content">
+          <a href="iteration.html">Les itérations</a>
+          <a href="classe_d.html">Classe D</a>
+          <a href="corps_securite.html">Département du Corps de sûreté</a>
+          <a href="departement_administratif.html">Département administratif</a>
+          <a href="departement_medical.html">Département médicale</a>
+          <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
+          <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
+          <a href="groupe_interet.html">Groupe d'Intérêt</a>
+          <a href="SCP.html">SCP</a>
+        </div>
+      </div>
+      
+      <a class="button" href="boutique.html">🛒 Boutique</a>
+      <a class="button" href="discord.html">💬 Discord</a>
+    </nav>
+  </header>
 
     <section>
         <h2>Présentation</h2>
