--- a/boutique.html
+++ b/boutique.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <header>
-    <h1>Accueil</h1>
+    <h1>🛒 Boutique du Serveur</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
@@ -67,6 +67,7 @@
           <a href="departement_medical.html">Département médicale</a>
           <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
           <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
+          <a href="groupe_interet.html">Groupe d'Intérêt</a>
           <a href="SCP.html">SCP</a>
         </div>
       </div>
