--- a/boutique.html
+++ b/boutique.html
@@ -46,6 +46,7 @@
     }
   </style>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style_menu.css" />
 </head>
 <body>
   <header>
