--- a/classe_d.html
+++ b/classe_d.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <header>
-    <h1>📚 Lore & Contexte du serveur</h1>
+    <h1>🎭 Roles - Classe D</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
@@ -70,7 +70,6 @@
       <a class="button" href="discord.html">💬 Discord</a>
     </nav>
   </header>
-<h1>Règlement personnel - Classe-D</h1>
 
 <section>
   <h2>Classe-D</h2>
