--- a/boutique.html
+++ b/boutique.html
@@ -36,6 +36,32 @@
     .paypal-button:hover {
       background: #e6b02a;
     }
+
+    .advantages {
+      margin-top: 40px;
+      background: #1e1e1e;
+      border-left: 5px solid #ffc439;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .advantages h2 {
+      color: #ffc439;
+      margin-bottom: 15px;
+    }
+
+    .advantages ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .advantages li::before {
+      content: "✔️ ";
+      margin-right: 8px;
+    }
     a {
       color: #1e90ff;
       text-decoration: none;
@@ -84,5 +110,20 @@
   </a>
 
   <p>Merci pour votre soutien ❤️</p>
+
+    <div class="advantages">
+    <h2>✨ Avantages possibles (selon le montant)</h2>
+    <ul>
+      <li>Accès à un rôle VIP sur Discord</li>
+      <li>Apparition sur le Hall des donateurs</li>
+      <li>Apparences exclusives en jeu</li>
+      <li>Réduction des temps d’attente dans certains cas (non abusif)</li>
+      <li>Accès à des salons spéciaux ou à un badge sur le site</li>
+    </ul>
+  </div>
+
+  <p style="margin-top: 30px; font-size: 0.95em; color: #aaa;">
+    🔒 Toutes les transactions sont sécurisées via PayPal. Aucun remboursement ne sera possible une fois les avantages attribués.
+  </p>
 </body>
 </html>
