--- a/groupe_interet.html
+++ b/groupe_interet.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Département Ingénierie et Service Technique</title>
+    <title>Groupe d'interet</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,7 +80,12 @@
 
     <section>
         <h2>Présentation</h2>
-        <p><strong>Objectif :</strong> Assurer la maintenance des systèmes, la propreté, la logistique et le bon fonctionnement de toutes les infrastructures du site.</p>
+        <p><strong>Objectif :</strong>
+    <ul>
+      <li>Utiliser les SCP pour dominer militairement et politiquement.</li>
+      <li>Saboter les projets de la Fondation SCP et voler des anomalies.</li>
+      <li>Libérer certains SCP jugés "utiles" ou exploitables à des fins de guerre ou de manipulation psychologique.</li>
+    </ul>
         <p><strong>Règlement :</strong> Le personnel technique doit respecter les consignes de sécurité, suivre les ordres de sa hiérarchie et maintenir les infrastructures sans interférer avec les opérations des autres départements sauf en cas d'urgence.</p>
     </section>
 
