--- a/corps_securite.html
+++ b/corps_securite.html
@@ -152,6 +152,45 @@
                 </tr>
             </tbody>
         </table>
+
+<h3>🚨 Force d’Intervention Mobile (FIM)</h3>
+<table>
+  <thead>
+    <tr>
+      <th>Rôle</th>
+      <th>Accréditation</th>
+      <th>Itération</th>
+      <th>Connaissances SCP</th>
+      <th>Responsabilités</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>FIM</td>
+      <td>Niveau 4</td>
+      <td>Niveau 4</td>
+      <td>Basique (survie, reconfinement, soins)</td>
+      <td>
+        Intervient sur les brèches ou attaques majeures sur le Site.<br>
+        Suit les ordres du Capitaine FIM, connaissance limitée du site.<br>
+        En cas de décès du Capitaine, un membre de l’escouade prend le relais.
+      </td>
+    </tr>
+    <tr>
+      <td>Sergent FIM</td>
+      <td>Niveau 4</td>
+      <td>Niveau 4</td>
+      <td>Approfondie (survie, reconfinement, soins)</td>
+      <td>
+        Fait le lien entre les informations du site et l’escouade FIM.<br>
+        Connaît les détails transmis par le personnel lors des appels au renfort.<br>
+        Peut demander le déploiement de FIM supplémentaires.
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+        
     </section>
 
     <footer>
