--- a/departement_administratif.html
+++ b/departement_administratif.html
@@ -185,6 +185,66 @@
                 </tr>
             </tbody>
         </table>
+            <h3>🧑‍🎓 Stagiaire</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Accréditation</th>
+                    <th>Itération</th>
+                    <th>Connaissances SCP</th>
+                    <th>Responsabilités</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Niveau 1</td>
+                    <td>Niveau 1</td>
+                    <td>Safe à Euclide (bases)</td>
+                    <td>Assister un membre du personnel dans ses tâches et rendez-vous</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h3>📎 Employé Administratif</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Accréditation</th>
+                    <th>Itération</th>
+                    <th>Connaissances SCP</th>
+                    <th>Responsabilités</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Niveau 2</td>
+                    <td>Niveau 3</td>
+                    <td>Safe à Keter (bases)</td>
+                    <td>Gérer les demandes internes, liaison avec l'extérieur, commandes logistiques</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h3>🛰️ Membre de la DJI (Division des Justifications Internes)</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Accréditation</th>
+                    <th>Itération</th>
+                    <th>Connaissances SCP</th>
+                    <th>Responsabilités</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Variable</td>
+                    <td>Niveau 3 à 4</td>
+                    <td>Safe à Keter (bases à complètes)</td>
+                    <td>Assurer le bon fonctionnement administratif, enquêter en interne, coordonner les processus de régulation</td>
+                </tr>
+            </tbody>
+        </table>
+
     </section>
 
     <footer>
