--- a/corps_securite.html
+++ b/corps_securite.html
@@ -70,6 +70,7 @@
           <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
           <a href="groupe_interet.html">Groupe d'Intérêt</a>
           <a href="SCP.html">SCP</a>
+          <a href="explication.html">Explication approfondie</a>
         </div>
       </div>
       
