--- a/explication.html
+++ b/explication.html
@@ -90,8 +90,8 @@
   <p class="intro">Voici un document d'explication complète mais plus précise, une attention soutenue est nécessaire tout au long de la lecture.</p>
 
   <div class="buttons">
-    <a class="btn btn-red" href="docs/Gates_zone_74.pdf" target="_blank">📄 Consulter le PDF</a>
-    <a class="btn btn-green" href="docs/Gates_zone_74.pdf" download>⬇️ Télécharger le PDF</a>
+    <a class="btn btn-red" href="docs/Gates_Zone_74.pdf" target="_blank">📄 Consulter le PDF</a>
+    <a class="btn btn-green" href="docs/Gates_Zone_74.pdf" download>⬇️ Télécharger le PDF</a>
   </div>
 
   <iframe src="docs/Role-dans-la-Zone-74.pdf"></iframe>
