--- a/explication.html
+++ b/explication.html
@@ -94,6 +94,6 @@
     <a class="btn btn-green" href="docs/Gates_Zone_74.pdf" download>⬇️ Télécharger le PDF</a>
   </div>
 
-  <iframe src="docs/Role-dans-la-Zone-74.pdf"></iframe>
+  <iframe src="docs/Gates_Zone_74.pdf"></iframe>
 </body>
 </html>
