--- a/reglement.html
+++ b/reglement.html
@@ -118,6 +118,9 @@
 
       <li><b>RP couple / sexe RP :</b> Les couples sont autorisés mais le sexe RP est interdit in-game.<br>
       Faites ça ailleurs, pas sur le serveur.</li>
+      <li><b>Politique :</b> Nous vous demandons d’éviter les discussions politiques sur le serveur ou du moins de ne pas les enflammer ou les rendre irespectueuse l’un envers l’autre.<br> 
+      La situation politique en France et à l'International est tendue on le sait mais nous sommes ici pour une bonne entente et surtout s’amuser alors garder vos débats pour les MP le plus possible !<br>
+      Ils ne sont pas interdits entre vos personnages RP mais alors celà doit rester dans le cadre du RP et rester respectueux envers tout le monde.</li>
     </ul>
     
   </div>
