--- a/departement_administratif.html
+++ b/departement_administratif.html
@@ -206,7 +206,7 @@
             </tbody>
         </table>
 
-        <h3>📎 Employé Administratif</h3>
+        <h3>📎 Employé</h3>
         <table>
             <thead>
                 <tr>
@@ -226,7 +226,7 @@
             </tbody>
         </table>
 
-        <h3>🛰️ Membre de la DJI (Division des Justifications Internes)</h3>
+        <h3>🛰️ Membre de la DJI (Division des Justice Interne)</h3>
         <table>
             <thead>
                 <tr>
