--- a/departement_administratif.html
+++ b/departement_administratif.html
@@ -241,7 +241,7 @@
                     <td>Variable</td>
                     <td>Niveau 3 à 4</td>
                     <td>Safe à Keter (bases à complètes)</td>
-                    <td>Assurer le bon fonctionnement administratif, enquêter en interne, coordonner les processus de régulation</td>
+                    <td>Juger</td>
                 </tr>
             </tbody>
         </table>
