--- a/departement_administratif.html
+++ b/departement_administratif.html
@@ -226,7 +226,7 @@
             </tbody>
         </table>
 
-        <h3>🛰️ Membre de la DJI (Division des Justice Interne)</h3>
+        <h3>🛰️ Membre de la DJI (Division de Justice Interne)</h3>
         <table>
             <thead>
                 <tr>
