--- a/discord.html
+++ b/discord.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Serveur Discord - Gates Site-74</title>
+  <title>Discord RP- Gates Site-74</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -93,7 +93,7 @@
 <body>
 
   <header>
-    <h1>💬 Rejoins notre Discord</h1>
+    <h1>💬 Discord RP</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
@@ -118,14 +118,14 @@
       </div>
 
       <a class="button" href="boutique.html">🛒 Boutique</a>
-      <a class="button" href="discord.html">💬 Discord</a>
+      <a class="button" href="discord.html">💬 Discord RP</a>
     </nav>
   </header>
 
   <p>Notre serveur Discord est le cœur de notre communauté !</p>
 
   <a href="https://discord.gg/HQMsgfFCQY" target="_blank" rel="noopener noreferrer" class="discord-button">
-    🔗 Rejoindre le Discord
+    🔗 Rejoindre le Discord RP - Zone-74
   </a>
 
   <div class="features">
