--- a/discord.html
+++ b/discord.html
@@ -122,7 +122,7 @@
     </nav>
   </header>
 
-  <p>Notre serveur Discord est le cœur de notre communauté !</p>
+  <p>Notre serveur Discord RP est le cœur de notre communauté !</p>
 
   <a href="https://discord.gg/HQMsgfFCQY" target="_blank" rel="noopener noreferrer" class="discord-button">
     🔗 Rejoindre le Discord RP - Zone-74
