--- a/guide.html
+++ b/guide.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" href="logo.png" type="image/png">
   <title>Guide du nouveau joueur – Serveur GMod SCP‑RP</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/style_menu.css" />
