--- a/iteration.html
+++ b/iteration.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="icon" href="logo.png" type="image/png">
 <title>Itération - Niveaux de connaissance SCP</title>
 <style>
   body {
