--- a/corps_securite.html
+++ b/corps_securite.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="logo.png" type="image/png">
     <title>Département du Corps de Sûreté</title>
     <style>
         body {
