--- a/departement_administratif.html
+++ b/departement_administratif.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="logo.png" type="image/png">
     <title>Département Administratif</title>
     <style>
         body {
