--- a/corps_securite.html
+++ b/corps_securite.html
@@ -103,8 +103,8 @@
             </thead>
             <tbody>
                 <tr><td>Recrue Garde</td><td>Niveau 1</td><td>Niveau 1</td><td>Safe à Euclid</td><td>Assistance basique</td></tr>
-                <tr><td>Garde (Médecin / Spé. Classe-D)</td><td>Niveau 2</td><td>Niveau 2</td><td>Safe à Keter (sauf aux reconfinés)</td><td>Peut donner des ordres aux recrues</td></tr>
-                <tr><td>Garde Confirmé</td><td>Niveau 2</td><td>Niveau 2</td><td>Safe à Keter (sauf aux reconfinés)</td><td>Encadre les gardes inférieurs</td></tr>
+                <tr><td>Garde (Médecin / Spé. Classe-D)</td><td>Niveau 2</td><td>Niveau 2</td><td>Safe à Keter (sauf reconfiner Keter)</td><td>Peut donner des ordres aux recrues</td></tr>
+                <tr><td>Garde Confirmé</td><td>Niveau 2</td><td>Niveau 2</td><td>Safe à Keter (sauf reconfiner Keter)</td><td>Encadre les gardes inférieurs</td></tr>
                 <tr><td>Garde Sénior</td><td>Niveau 2</td><td>Niveau 2</td><td>Safe à Keter</td><td>Encadre les gardes inférieurs</td></tr>
                 <tr><td>Sous-Chef Garde</td><td>Niveau 3</td><td>Niveau 3</td><td>Safe à Keter</td><td>Bras droit du chef garde</td></tr>
                 <tr><td>Chef Garde</td><td>Niveau 4</td><td>It. 3 (général), It. 4 (sécurité)</td><td>Approfondies</td><td>Dirige tous les gardes</td></tr>
