--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   <link rel="stylesheet" href="assets/css/theme.css">
   <title>Serveur GMod - Accueil</title>
   <style>
-  <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
     body {
-      background-color: #0a0a0a;
-      color: #e0e0e0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #121212;
+      color: white;
+      font-family: Arial, sans-serif;
       overflow-x: hidden;
       display: flex;
       flex-direction: column;
@@ -29,7 +28,6 @@
       height: 100%;
       object-fit: cover;
       z-index: 0;
-      filter: grayscale(90%) brightness(0.6);
     }
     .left-image {
       left: 0;
@@ -47,22 +45,21 @@
       flex-grow: 1;
     }
     .logo {
-      width: 120px;
+      width: 150px;
       margin-bottom: 20px;
-      filter: drop-shadow(0 0 10px #f00);
     }
     .button {
-      background-color: #b00;
+      background-color: #1e90ff;
       color: white;
       padding: 10px 20px;
       text-decoration: none;
-      border-radius: 6px;
+      border-radius: 8px;
       margin: 5px;
       display: inline-block;
       transition: background 0.3s;
     }
     .button:hover {
-      background-color: #900;
+      background-color: #0f75d1;
     }
     .dropdown {
       position: relative;
@@ -71,21 +68,21 @@
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: #141414;
+      background-color: #1e1e1e;
       min-width: 160px;
-      box-shadow: 0px 4px 10px rgba(0,0,0,0.5);
-      border-radius: 6px;
+      box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
+      border-radius: 8px;
       z-index: 2;
     }
     .dropdown-content a {
-      color: #ddd;
-      padding: 10px 14px;
+      color: white;
+      padding: 10px 16px;
       text-decoration: none;
       display: block;
       text-align: left;
     }
     .dropdown-content a:hover {
-      background-color: #292929;
+      background-color: #333;
     }
     .dropdown:hover .dropdown-content {
       display: block;
@@ -93,62 +90,51 @@
     .steam-collection {
       margin-top: 50px;
       padding: 30px;
-      background-color: #121212;
-      border: 1px solid #333;
+      background-color: #1a1a1a;
       border-radius: 12px;
       text-align: center;
     }
     .steam-collection h2 {
       margin-bottom: 10px;
-      color: #ff4444;
-      font-size: 1.5em;
     }
     .steam-collection p {
       margin-bottom: 15px;
       font-size: 1.1em;
-      color: #ccc;
     }
+    /* Carrousel styles */
     .carousel-container {
       position: relative;
-      width: 600px;
+      width: 600px; /* 3 images x 180px wide */
       margin: 0 auto 20px;
       overflow: hidden;
       border-radius: 12px;
-      border: 1px solid #444;
     }
     .carousel-track {
       display: flex;
       transition: transform 1s ease;
-      width: max-content;
+      width: max-content; /* largeur automatique en fonction du contenu */
     }
     .carousel-slide {
       display: flex;
-      width: 600px;
+      width: 600px; /* largeur d'un slide = 3 images * 180px */
       justify-content: space-between;
-      flex-shrink: 0;
+      flex-shrink: 0; /* empêche le rétrécissement */
     }
     .carousel-slide img {
       width: 180px;
       height: 120px;
-      border-radius: 6px;
+      border-radius: 12px;
       object-fit: cover;
-      filter: brightness(0.85);
-      transition: transform 0.3s;
     }
-    .carousel-slide img:hover {
-      transform: scale(1.05);
-    }
-    header h1 {
-      color: #ff4444;
+    .about {
+      padding: 30px;
+      background-color: #1a1a1a;
+      border-radius: 12px;
+      margin-left: 20%;
+      margin-right: 20%;
       text-align: center;
-      margin: 20px 0;
-      font-size: 2.2em;
+      z-index: 1;
     }
-    nav.main-nav {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-  </style>
   </style>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/style_menu.css" />
