--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="logo.png" type="image/png">
   <link rel="stylesheet" href="assets/css/theme.css">
-  <title>Serveur GMod - Accueil</title>
+  <title>Zone-74 - Accueil</title>
   <style>
     * {
       margin: 0;
@@ -13,13 +13,16 @@
       box-sizing: border-box;
     }
     body {
-      background-color: #121212;
-      color: white;
-      font-family: Arial, sans-serif;
+      background-color: #0a0a0a;
+      color: #eaeaea;
+      font-family: 'Courier New', monospace;
       overflow-x: hidden;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      background-image: url('assets/img/background_dark.jpg');
+      background-size: cover;
+      background-position: center;
     }
     .side-image {
       position: fixed;
@@ -27,113 +30,99 @@
       width: 20%;
       height: 100%;
       object-fit: cover;
+      opacity: 0.07;
       z-index: 0;
     }
-    .left-image {
-      left: 0;
+    .left-image { left: 0; }
+    .right-image { right: 0; }
+    header {
+      background-color: rgba(0, 0, 0, 0.9);
+      padding: 20px;
+      text-align: center;
+      border-bottom: 2px solid #ff0000;
     }
-    .right-image {
-      right: 0;
+    header h1 {
+      font-size: 2em;
+      color: #ff0000;
+      text-shadow: 0 0 5px #ff0000;
+    }
+    nav.main-nav {
+      margin-top: 10px;
+    }
+    .main-nav .button {
+      background-color: transparent;
+      color: #eaeaea;
+      border: 1px solid #ff0000;
+      padding: 10px 15px;
+      text-decoration: none;
+      border-radius: 4px;
+      margin: 5px;
+      display: inline-block;
+      transition: background 0.3s, color 0.3s;
+    }
+    .main-nav .button:hover {
+      background-color: #ff0000;
+      color: black;
+    }
+    .dropdown-content {
+      background-color: #111;
+      border: 1px solid #ff0000;
+    }
+    .dropdown-content a:hover {
+      background-color: #220000;
     }
     .main-content {
       position: relative;
       z-index: 1;
-      margin-left: 20%;
-      margin-right: 20%;
+      margin: 0 20%;
       padding: 40px 20px;
       text-align: center;
       flex-grow: 1;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(255, 0, 0, 0.3);
     }
     .logo {
-      width: 150px;
+      width: 120px;
+      filter: grayscale(100%) brightness(0.8);
       margin-bottom: 20px;
     }
-    .button {
-      background-color: #1e90ff;
-      color: white;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 8px;
-      margin: 5px;
-      display: inline-block;
-      transition: background 0.3s;
-    }
-    .button:hover {
-      background-color: #0f75d1;
-    }
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #1e1e1e;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
-      border-radius: 8px;
-      z-index: 2;
-    }
-    .dropdown-content a {
-      color: white;
-      padding: 10px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-    }
-    .dropdown-content a:hover {
-      background-color: #333;
-    }
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-    .steam-collection {
-      margin-top: 50px;
-      padding: 30px;
-      background-color: #1a1a1a;
-      border-radius: 12px;
-      text-align: center;
-    }
-    .steam-collection h2 {
+    .main-content h1 {
+      font-size: 2.2em;
+      color: #ff0000;
+      text-shadow: 0 0 10px #ff0000;
       margin-bottom: 10px;
     }
-    .steam-collection p {
-      margin-bottom: 15px;
+    .main-content p {
       font-size: 1.1em;
+      margin-bottom: 20px;
     }
-    /* Carrousel styles */
-    .carousel-container {
-      position: relative;
-      width: 600px; /* 3 images x 180px wide */
-      margin: 0 auto 20px;
-      overflow: hidden;
+    .steam-collection {
+      background-color: #111;
+      border: 1px solid #ff0000;
+      padding: 30px;
+      margin-top: 40px;
       border-radius: 12px;
     }
-    .carousel-track {
-      display: flex;
-      transition: transform 1s ease;
-      width: max-content; /* largeur automatique en fonction du contenu */
+    .steam-collection h2 {
+      color: #ff0000;
+      margin-bottom: 15px;
     }
-    .carousel-slide {
-      display: flex;
-      width: 600px; /* largeur d'un slide = 3 images * 180px */
-      justify-content: space-between;
-      flex-shrink: 0; /* empêche le rétrécissement */
+    .carousel-container {
+      border: 1px solid #222;
+      border-radius: 12px;
+      overflow: hidden;
     }
     .carousel-slide img {
-      width: 180px;
-      height: 120px;
-      border-radius: 12px;
-      object-fit: cover;
+      border: 1px solid #222;
     }
     .about {
+      background-color: #0f0f0f;
       padding: 30px;
-      background-color: #1a1a1a;
+      margin-top: 40px;
       border-radius: 12px;
-      margin-left: 20%;
-      margin-right: 20%;
-      text-align: center;
-      z-index: 1;
+      border-left: 4px solid #ff0000;
+      font-style: italic;
     }
   </style>
   <link rel="stylesheet" href="assets/css/style.css" />
@@ -141,51 +130,44 @@
 </head>
 <body>
   <header>
-    <h1>☣ Accueil</h1>
+    <h1>⚠️ ACCÈS RÉSERVÉ - ZONE-74 ⚠️</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
       <a class="button" href="lore.html">📚 Lore</a>
       <a class="button" href="mises-a-jour.html">📰 GATES News</a>
       <a class="button" href="reglement.html">⚖️ Règlement</a>
-
       <div class="dropdown">
-        <a class="button">🎭 Roles</a>
+        <a class="button">🎭 Rôles</a>
         <div class="dropdown-content">
           <a href="iteration.html">Les itérations</a>
           <a href="classe_d.html">Classe D</a>
           <a href="corps_securite.html">Département du Corps de sûreté</a>
           <a href="departement_administratif.html">Département administratif</a>
-          <a href="departement_medical.html">Département médicale</a>
-          <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
-          <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
-          <a href="groupe_interet.html">Groupe d'Intérêt</a>
+          <a href="departement_medical.html">Département médical</a>
+          <a href="departement_technique.html">Département Technique</a>
+          <a href="departement_scientifique.html">Département Scientifique</a>
+          <a href="groupe_interet.html">Groupes d'intérêt</a>
           <a href="SCP.html">SCP</a>
-          <a href="explication.html">Explication approfondie</a>
+          <a href="explication.html">Explications</a>
         </div>
       </div>
-      
       <a class="button" href="boutique.html">🛒 Boutique</a>
       <a class="button" href="discord.html">💬 Discord</a>
     </nav>
   </header>
-  <!-- Images étendues -->
   <img src="image1.png" alt="Image gauche" class="side-image left-image" />
   <img src="image2.png" alt="Image droite" class="side-image right-image" />
-
-  <!-- Contenu principal -->
   <div class="main-content">
-    <img src="logo.png" alt="Logo Serveur" class="logo" />
-    <h1>Bienvenue sur notre serveur GMod !</h1>
-    <p>Rejoignez une communauté active et amusante sur Garry's Mod.</p>
-    
-    <!-- Section Steam -->
+    <img src="logo.png" alt="Logo Fondation SCP" class="logo" />
+    <h1>⚠️ CLASSIFICATION : NIVEAU 4 - CONFIDENTIEL ⚠️</h1>
+    <p>Bienvenue à la ZONE-74. Toute activité est surveillée. Veuillez respecter les protocoles.</p>
     <section class="steam-collection">
       <h2>📦 Collection Steam</h2>
-      <p>Découvrez les addons utilisés sur notre serveur pour profiter de la meilleure expérience !</p>
-
+      <p>Les éléments suivants sont requis pour l'accès complet aux installations virtuelles.</p>
       <div class="carousel-container">
         <div class="carousel-track" id="carouselTrack">
+
           <div class="carousel-slide">
             <img src="addons-images/addon1.png" alt="Addon 1" />
             <img src="addons-images/addon2.png" alt="Addon 2" />
@@ -327,16 +309,12 @@
 
       <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3042213523" target="_blank" class="button">Voir la collection</a>
     </section>
+      </div>
+    </section>
+    <div class="about">
+      ⚠️ Avertissement : Toute tentative de fuite ou de brèche d'information entraînera des mesures immédiates. Ce serveur est une simulation immersive fondée sur l'univers de la Fondation SCP. ⚠️
+    </div>
   </div>
-
-  <!-- Section À propos -->
-  <section class="about">
-    <h2>À propos</h2>
-    <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
-    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
-  </section>
-
-  <!-- JS pour le carrousel -->
   <script>
     const carouselTrack = document.getElementById('carouselTrack');
     const slides = carouselTrack.children;
@@ -349,6 +327,5 @@
       carouselTrack.style.transform = `translateX(-${index * slideWidth}px)`;
     }, 3000);
   </script>
-
 </body>
 </html>
