--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     .main-content {
       position: relative;
       z-index: 1;
-      margin: 0 20%;
+      margin: 0 auto;
+      max-width: 1200px;
       padding: 40px 20px;
       text-align: center;
       flex-grow: 1;
@@ -109,12 +110,20 @@
       margin-bottom: 15px;
     }
     .carousel-container {
-      border: 1px solid #222;
-      border-radius: 12px;
-      overflow: hidden;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+      gap: 15px;
+      margin-top: 20px;
     }
-    .carousel-slide img {
-      border: 1px solid #222;
+    .carousel-container img {
+      width: 100%;
+      height: auto;
+      border: 1px solid #333;
+      border-radius: 8px;
+      transition: transform 0.3s;
+    }
+    .carousel-container img:hover {
+      transform: scale(1.05);
     }
     .about {
       background-color: #0f0f0f;
@@ -166,166 +175,17 @@
       <h2>📦 Collection Steam</h2>
       <p>Les éléments suivants sont requis pour l'accès complet aux installations virtuelles.</p>
       <div class="carousel-container">
-        <div class="carousel-track" id="carouselTrack">
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon1.png" alt="Addon 1" />
-            <img src="addons-images/addon2.png" alt="Addon 2" />
-            <img src="addons-images/addon3.png" alt="Addon 3" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon4.png" alt="Addon 4" />
-            <img src="addons-images/addon5.png" alt="Addon 5" />
-            <img src="addons-images/addon6.png" alt="Addon 6" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon7.png" alt="Addon 7" />
-            <img src="addons-images/addon8.png" alt="Addon 8" />
-            <img src="addons-images/addon9.png" alt="Addon 9" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon10.png" alt="Addon 10" />
-            <img src="addons-images/addon11.png" alt="Addon 11" />
-            <img src="addons-images/addon12.png" alt="Addon 12" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon13.png" alt="Addon 13" />
-            <img src="addons-images/addon14.png" alt="Addon 14" />
-            <img src="addons-images/addon15.png" alt="Addon 15" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon16.png" alt="Addon 16" />
-            <img src="addons-images/addon17.png" alt="Addon 17" />
-            <img src="addons-images/addon18.png" alt="Addon 18" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon19.png" alt="Addon 19" />
-            <img src="addons-images/addon20.png" alt="Addon 20" />
-            <img src="addons-images/addon21.png" alt="Addon 21" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon22.png" alt="Addon 22" />
-            <img src="addons-images/addon23.png" alt="Addon 23" />
-            <img src="addons-images/addon24.png" alt="Addon 24" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon25.png" alt="Addon 25" />
-            <img src="addons-images/addon26.png" alt="Addon 26" />
-            <img src="addons-images/addon27.png" alt="Addon 27" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon28.png" alt="Addon 28" />
-            <img src="addons-images/addon29.png" alt="Addon 29" />
-            <img src="addons-images/addon30.png" alt="Addon 30" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon31.png" alt="Addon 31" />
-            <img src="addons-images/addon32.png" alt="Addon 32" />
-            <img src="addons-images/addon33.png" alt="Addon 33" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon34.png" alt="Addon 34" />
-            <img src="addons-images/addon35.png" alt="Addon 35" />
-            <img src="addons-images/addon36.png" alt="Addon 36" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon37.png" alt="Addon 37" />
-            <img src="addons-images/addon38.png" alt="Addon 38" />
-            <img src="addons-images/addon39.png" alt="Addon 39" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon40.png" alt="Addon 40" />
-            <img src="addons-images/addon41.png" alt="Addon 41" />
-            <img src="addons-images/addon42.png" alt="Addon 42" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon43.png" alt="Addon 43" />
-            <img src="addons-images/addon44.png" alt="Addon 44" />
-            <img src="addons-images/addon45.png" alt="Addon 45" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon46.png" alt="Addon 46" />
-            <img src="addons-images/addon47.png" alt="Addon 47" />
-            <img src="addons-images/addon48.png" alt="Addon 48" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon49.png" alt="Addon 49" />
-            <img src="addons-images/addon50.png" alt="Addon 50" />
-            <img src="addons-images/addon51.png" alt="Addon 51" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon52.png" alt="Addon 52" />
-            <img src="addons-images/addon53.png" alt="Addon 53" />
-            <img src="addons-images/addon54.png" alt="Addon 54" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon55.png" alt="Addon 55" />
-            <img src="addons-images/addon56.png" alt="Addon 56" />
-            <img src="addons-images/addon57.png" alt="Addon 57" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon58.png" alt="Addon 58" />
-            <img src="addons-images/addon59.png" alt="Addon 59" />
-            <img src="addons-images/addon60.png" alt="Addon 60" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon61.png" alt="Addon 61" />
-            <img src="addons-images/addon62.png" alt="Addon 62" />
-            <img src="addons-images/addon63.png" alt="Addon 63" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon64.png" alt="Addon 64" />
-            <img src="addons-images/addon65.png" alt="Addon 65" />
-            <img src="addons-images/addon66.png" alt="Addon 66" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon67.png" alt="Addon 67" />
-            <img src="addons-images/addon68.png" alt="Addon 68" />
-            <img src="addons-images/addon69.png" alt="Addon 69" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon70.png" alt="Addon 70" />
-            <img src="addons-images/addon71.png" alt="Addon 71" />
-            <img src="addons-images/addon72.png" alt="Addon 72" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon73.png" alt="Addon 73" />
-            <img src="addons-images/addon74.png" alt="Addon 74" />
-            <img src="addons-images/addon75.png" alt="Addon 75" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon76.png" alt="Addon 76" />
-            <img src="addons-images/addon77.png" alt="Addon 77" />
-            <img src="addons-images/addon78.png" alt="Addon 78" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon79.png" alt="Addon 79" />
-            <img src="addons-images/addon80.png" alt="Addon 80" />
-          </div>
-          
-          <!-- Tu peux ajouter d’autres slides ici en suivant le même modèle -->
-        </div>
-      </div>
-
-      <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3042213523" target="_blank" class="button">Voir la collection</a>
-    </section>
+        <!-- Génération dynamique des images -->
+        <!-- Utiliser JavaScript ou script back-end pour automatiser si besoin -->
+        <!-- Exemple statique : -->
+        <img src="addons-images/addon1.png" alt="Addon 1">
+        <img src="addons-images/addon2.png" alt="Addon 2">
+        <img src="addons-images/addon3.png" alt="Addon 3">
+        <img src="addons-images/addon4.png" alt="Addon 4">
+        <img src="addons-images/addon5.png" alt="Addon 5">
+        <!-- Ajouter jusqu'à addon41.png -->
       </div>
     </section>
-    <div class="about">
-      ⚠️ Avertissement : Toute tentative de fuite ou de brèche d'information entraînera des mesures immédiates. Ce serveur est une simulation immersive fondée sur l'univers de la Fondation SCP. ⚠️
-    </div>
   </div>
-  <script>
-    const carouselTrack = document.getElementById('carouselTrack');
-    const slides = carouselTrack.children;
-    const slideWidth = 600; // largeur fixe d'un slide en px
-    let index = 0;
-
-    setInterval(() => {
-      index++;
-      if (index >= slides.length) index = 0;
-      carouselTrack.style.transform = `translateX(-${index * slideWidth}px)`;
-    }, 3000);
-  </script>
 </body>
 </html>
