--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
   <!-- Contenu principal -->
   <div class="main-content">
     <img src="logo.png" alt="Logo Serveur" class="logo" />
-    <h1>Bienvenue sur notre serveur GMod !</h1>
-    <p>Rejoignez une communauté active et amusante sur Garry's Mod.</p>
+    <h1>⚠️ Bienvenue dans la Zone - 74 ⚠️</h1>
+    <p>Rejoignez une nouvelle communauté active et amusante sur Garry's Mod - SCP RP.</p>
     
     <!-- Section Steam -->
     <section class="steam-collection">
@@ -332,8 +332,9 @@
   <!-- Section À propos -->
   <section class="about">
     <h2>À propos</h2>
-    <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
-    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
+    <p> ⚠️ Avertissement : Toute tentative de fuite ou de brèche d'information entraînera des mesures immédiates. Ce serveur est une simulation immersive fondée sur l'univers de la Fondation SCP. ⚠️
+</p>
+    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus, il n'y a point de "Demain 16h" est compte.</p>
   </section>
 
   <!-- JS pour le carrousel -->
