--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <h2>À propos</h2>
     <p> ⚠️ Avertissement : Toute tentative de fuite ou de brèche d'information entraînera des mesures immédiates. Ce serveur est une simulation immersive fondée sur l'univers de la Fondation SCP. ⚠️
 </p>
-    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus, il n'y a point de "Demain 16h" est compte.</p>
+    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus, il n'y a point de "Demain 16h" qui compte.</p>
   </section>
 
   <!-- JS pour le carrousel -->
