--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </head>
 <body>
   <header>
-    <h1>☣ Accueil</h1>
+    <h1>☣ Accueil Gates</h1>
     <nav class="main-nav">
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
