--- a/iteration.html
+++ b/iteration.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="icon" href="logo.png" type="image/png">
+<link rel="stylesheet" href="assets/css/theme.css">
 <title>Itération - Niveaux de connaissance SCP</title>
 <style>
   body {
