--- a/corps_securite.html
+++ b/corps_securite.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="logo.png" type="image/png">
+    <link rel="stylesheet" href="assets/css/theme.css">
     <title>Département du Corps de Sûreté</title>
     <style>
         body {
