--- a/departement_technique.html
+++ b/departement_technique.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="logo.png" type="image/png">
+    <link rel="stylesheet" href="assets/css/theme.css">
     <title>Département Ingénierie et Service Technique</title>
     <style>
         body {
