--- a/SCP.html
+++ b/SCP.html
@@ -27,24 +27,42 @@
     margin-bottom: 25px;
     box-sizing: border-box;
   }
-  .accordion {
-    background-color: #222;
-    color: #eee;
-    cursor: pointer;
-    padding: 15px 20px;
-    margin-bottom: 5px;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 1.2rem;
-    transition: background-color 0.3s ease;
-    border-radius: 5px;
-  }
-  .accordion:hover,
-  .accordion.active {
-    background-color: #ff4444;
-    color: white;
-  }
+.accordion-container {
+  display: flex;
+  flex-direction: column; /* empile les boutons verticalement */
+  width: 200px; /* largeur fixe ou ajustable */
+  gap: 8px; /* espace entre les boutons */
+}
+
+.accordion-button {
+  background-color: #333;
+  color: white;
+  border: none;
+  padding: 12px 16px;
+  text-align: left;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+  width: 100%; /* prend toute la largeur du container */
+}
+
+.accordion-button:hover {
+  background-color: #555;
+}
+
+.accordion-content {
+  display: none;
+  padding: 10px 16px;
+  background-color: #222;
+  color: #ddd;
+  border-radius: 0 0 4px 4px;
+  margin-bottom: 12px;
+}
+
+.accordion-content.active {
+  display: block;
+}
   .panel {
     background-color: #333;
     max-height: 0;
@@ -295,18 +313,10 @@
 
 <script>
   // Accordéon
-  const accordions = document.querySelectorAll('.accordion');
-  accordions.forEach(acc => {
-    acc.addEventListener('click', () => {
-      acc.classList.toggle('active');
-      const panel = acc.nextElementSibling;
-      if (panel.style.maxHeight) {
-        panel.style.maxHeight = null;
-      } else {
-        panel.style.maxHeight = panel.scrollHeight + 'px';
-      }
-    });
-  });
+function toggleAccordion(button) {
+  const content = button.nextElementSibling;
+  content.classList.toggle('active');
+}
 
   // Filtre de recherche
   const searchInput = document.getElementById('searchInput');
