--- a/discord.html
+++ b/discord.html
@@ -124,10 +124,10 @@
     </nav>
   </header>
 
-  <p>Notre serveur discord Gates - ZONE74  est le cœur de notre communauté !</p>
+  <p>Notre serveur Discord RP est le cœur de notre communauté !</p>
 
   <a href="https://discord.gg/HQMsgfFCQY" target="_blank" rel="noopener noreferrer" class="discord-button">
-    🔗 Rejoindre le Discord RP - Zone-74
+    🔗 Rejoindre le Discord RP - Gates Zone-74
   </a>
 
   <div class="features">
