--- a/mises-a-jour.html
+++ b/mises-a-jour.html
@@ -36,7 +36,7 @@
       </div>
       
       <a class="button" href="boutique.html">🛒 Boutique</a>
-      <a class="button" href="discord.html">💬 Discord</a>
+      <a class="button" href="discord.html">💬 Discord RP</a>
     </nav>
   </header>
   <h1>📰 Mises à jour du serveur</h1>
