--- a/corps_securite.html
+++ b/corps_securite.html
@@ -77,7 +77,7 @@
       </div>
       
       <a class="button" href="boutique.html">🛒 Boutique</a>
-      <a class="button" href="discord.html">💬 Discord</a>
+      <a class="button" href="discord.html">💬 Discord RP</a>
     </nav>
   </header>
     
