--- a/SCP.html
+++ b/SCP.html
@@ -106,7 +106,7 @@
       </div>
       
       <a class="button" href="boutique.html">🛒 Boutique</a>
-      <a class="button" href="discord.html">💬 Discord</a>
+      <a class="button" href="discord.html">💬 Discord RP</a>
     </nav>
   </header>
 <input type="text" id="searchInput" placeholder="Rechercher un SCP (ex : 106, 049, 682, etc.)" />
