--- a/explication.html
+++ b/explication.html
@@ -85,7 +85,7 @@
       </div>
       
       <a class="button" href="boutique.html">🛒 Boutique</a>
-      <a class="button" href="discord.html">💬 Discord</a>
+      <a class="button" href="discord.html">💬 Discord RP</a>
     </nav>
   </header>
   <h1>Explication approfondie</h1>
