--- a/boutique.html
+++ b/boutique.html
@@ -104,7 +104,7 @@
       </div>
       
       <a class="button" href="boutique.html">🛒 Boutique</a>
-      <a class="button" href="discord.html">💬 Discord</a>
+      <a class="button" href="discord.html">💬 Discord RP</a>
     </nav>
   </header>
   <p>Soutenez le serveur et obtenez des avantages !</p>
