--- a/lore.html
+++ b/lore.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta property="og:image" content="logo.png" />
   <link rel="icon" href="logo.png" type="image/png">
   <link rel="stylesheet" href="assets/css/theme.css">
   <title>Lore & Contexte - SCP-RP</title>
