--- a/departement_scientifique.html
+++ b/departement_scientifique.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:image" content="logo.png" />
     <link rel="icon" href="logo.png" type="image/png">
     <link rel="stylesheet" href="assets/css/theme.css">
     <title>Département Scientifique et de Recherche</title>
