--- a/boutique.html
+++ b/boutique.html
@@ -121,9 +121,8 @@
     <ul>
       <li>Accès à un rôle VIP sur Discord</li>
       <li>Apparition sur le Hall des donateurs</li>
-      <li>Apparences exclusives en jeu</li>
-      <li>Réduction des temps d’attente dans certains cas (non abusif)</li>
-      <li>Accès à des salons spéciaux ou à un badge sur le site</li>
+      <li>Accès à des rôles exclusives en jeu</li>
+      <li>Accès à des salons spéciaux</li>
     </ul>
   </div>
 
