--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Bienvenue sur la Zone-74" />
+  <meta property="og:description" content="Serveur SCP-RP Zone-74 - Découvrez les départements, le règlement et plus encore." />
   <meta property="og:image" content="logo.png" />
   <link rel="icon" href="logo.png" type="image/png">
   <link rel="stylesheet" href="assets/css/theme.css">
